@@ -20,9 +20,15 @@
 #include <arch/object/vcpu.h>
 #include <drivers/timer/arm_generic.h>
 
+#ifdef CONFIG_DISABLE_WFI_WFE_TRAPS
+/* Trap SMC and override CPSR.AIF */
+#define HCR_COMMON ( HCR_TSC | HCR_AMO | HCR_IMO \
+                   | HCR_FMO | HCR_DC  | HCR_VM)
+#else
 /* Trap WFI/WFE/SMC and override CPSR.AIF */
 #define HCR_COMMON ( HCR_TSC | HCR_TWE | HCR_TWI | HCR_AMO | HCR_IMO \
                    | HCR_FMO | HCR_DC  | HCR_VM)
+#endif
 /* Allow native tasks to run at PL1, but restrict access */
 #define HCR_NATIVE ( HCR_COMMON | HCR_TGE | HCR_TVM | HCR_TTLB | HCR_TCACHE \
                    | HCR_TAC | HCR_SWIO)
